@@ -1,3 +1,14 @@
+2017-06-19  Joakim Möller  <joakim.moller@molflow.com>
+	* Mscripts_webapi/webread_retry.m: implemented a retry proxy function
+	for webread to increase the chances of successful processing.
+	* Build_scripts/runscript.m: using proxy function
+	* Mscripts_webapi/get_logdata4freqmode.m: using proxy function
+	* Mscripts_webapi/get_measuredfreqmodes4daterange.m: using proxy 
+	function
+	* Mscripts_webapi/get_scan_aux_data.m: using proxy function
+	* Mscripts_webapi/get_scan_l1b_data.m: using proxy function
+	* Mscripts_webapi/get_scan_log_l1b_data.m: using proxy functiony
+
 2017-06-19  Andreas Skyman  <andreas.skyman@molflow.com>
 
 	* Build_scripts/docker/batch_buil.sh: Updated comment, added fms 22 and 24
